examples/errors/error.orn
const x: int[5] = [1, 2, 3, 4, 5, "blopa"]
let y: int = 0
let z: int = x[y]

y = 10
z = x[y]
